# azure-cli-rs

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
az-cli-rs/: .gitignore  Cargo.toml  build.rs  gen_config.toml
az-cli-rs/src/: arm.rs  cli.rs  cloud.rs  config.rs  error.rs  generated.rs  http_client.rs  main.rs  output.rs  profile.rs  rest.rs  selector.rs
az-cli-rs/src/auth/: broker.rs  certificate.rs  cloud_shell.rs  device_code.rs  interactive.rs  managed_identity.rs  mod.rs  oauth2.rs  service_principal.rs  token_cache.rs
az-cli-rs/src/commands/: acr.rs  appconfig.rs  appservice.rs  cognitiveservices.rs  deployment.rs  eventgrid.rs  feature.rs  functionapp.rs  functionapp_ext.rs  group.rs  keyvault.rs  lock.rs  logicapp.rs  managed_app.rs  management_group.rs  maps.rs  mod.rs  network.rs  provider.rs  redis.rs  resource.rs  role.rs  signalr.rs  stack.rs  staticwebapp.rs  storage.rs  tag.rs  template_specs.rs  vm.rs  vm_ext.rs  vmss_ext.rs  webapp.rs
az-cli-rs/src/testing/: cassette.rs  checkers.rs  fixtures.rs  mod.rs  preparers.rs  processors.rs  recording_client.rs  scenario.rs  test_group.rs
az-cli-rs/tests/parity/: suite_account.toml  suite_group.toml  suite_readonly.toml
az-cli-rs/tests/recordings/group/: test_group_crud.json
az-cli-rs/tools/aaz_gen/: Cargo.toml
az-cli-rs/tools/aaz_gen/src/: emitter.rs  lib.rs  main.rs  model.rs  parser.rs
az-cli-rs/tools/az_parity/: Cargo.toml
az-cli-rs/tools/az_parity/src/: differ.rs  main.rs  reporter.rs  runner.rs  suite.rs
docs/: ARCHITECTURE.md  AUTHENTICATION.md
researches/: feature-parity.md
