[package]
name = "azrs"
version = "0.1.0"
edition = "2021"
description = "Azure CLI reimplemented in Rust"
license = "MIT"

[[bin]]
name = "azrs"
path = "src/main.rs"

[features]
# Statically link a vendored OpenSSL. Enabled only for musl release builds where the
# system OpenSSL is unavailable; leaves default (native-tls) builds unchanged.
vendored-openssl = ["reqwest/native-tls-vendored"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
thiserror = "2"
colored = "2"
tiny_http = "0.12"
libc = "0.2"
jmespath = "0.5"
serde_yaml = "0.9"
regex = "1"

[build-dependencies]
aaz_gen = { path = "tools/aaz_gen", package = "aaz-gen" }
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
