[package]
name = "aaz-gen"
version = "0.1.0"
edition = "2021"
description = "Code generator: Python AAZ commands → Rust azrs modules"

[lib]
name = "aaz_gen"
path = "src/lib.rs"

[[bin]]
name = "aaz-gen"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
walkdir = "2"
