[package]
name = "az-parity"
version = "0.1.0"
edition = "2021"
description = "Behavioral comparison agent for az (Python) vs azrs (Rust)"

[[bin]]
name = "az-parity"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
